feat(ci): add test frontend ci

--- a/docs/api/0004-mcp.md
+++ b/docs/api/0004-mcp.md
@@ -38,7 +38,7 @@ Before using the PowerMem MCP Server, please ensure:
 
 For PowerMem installation and configuration, please refer to:
 
-[PowerMem Documentation](https://powermem.ai/docs)
+[PowerMem Documentation](https://www.powermem.ai/docs)
 
 ## Startup
 
