refactor: llm and embedding config simplify (#114)
* refactor: llm and embedding model config simplify

* localhost to 127.0.0.1

--- a/docs/examples/scenario_6_sub_stores.ipynb
+++ b/docs/examples/scenario_6_sub_stores.ipynb
@@ -79,7 +79,7 @@
     "        \"config\": {\n",
     "            \"collection_name\": \"main_memories\",\n",
     "            \"embedding_model_dims\": 1536,\n",
-    "            \"host\": os.getenv(\"OCEANBASE_HOST\", \"localhost\"),\n",
+    "            \"host\": os.getenv(\"OCEANBASE_HOST\", \"127.0.0.1\"),\n",
     "            \"port\": int(os.getenv(\"OCEANBASE_PORT\", \"2881\")),\n",
     "            \"user\": os.getenv(\"OCEANBASE_USER\", \"root@test_tenant\"),\n",
     "            \"password\": os.getenv(\"OCEANBASE_PASSWORD\", \"\"),\n",
